--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,17 @@ body {
   height: 100%;
   font-family: "Noto Sans JP", sans-serif;
   /* background-image: url(""); */
-  background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2401x1600/5feada3dbb796c41fa01df7bd1dbd6f2/photo-1466781783364-36c955e42a7f.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(255, 255, 255, 0.7) 100%
+    ),
+    url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2401x1600/5feada3dbb796c41fa01df7bd1dbd6f2/photo-1466781783364-36c955e42a7f.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
 
 /*Navbar*/
-
 @media (min-width: 768px) {
   .navbar-nav > li > a {
     padding-top: 26.5px;
@@ -165,6 +169,7 @@ h1,
 h2,
 h3 {
   color: #2a4c54;
+  /* text-shadow: 2px 2px 4px #f8f8f8; */
 }
 
 #plantesInt,
