--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,20 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #f8f8f8;
   color: #2a4c54;
   height: 100%;
   font-family: "Noto Sans JP", sans-serif;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.5) 0%,
       rgba(255, 255, 255, 0.3) 100%
     ),
     url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2401x1600/5feada3dbb796c41fa01df7bd1dbd6f2/photo-1466781783364-36c955e42a7f.jpg");
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: fixed; */
 }
 
 /*Navbar*/
@@ -30,7 +34,7 @@ nav {
   position: absolute;
   background: #f8f8f8;
   z-index: -1;
-  height: 100px;
+  /* height: 100px; */
 }
 
 nav a:hover {
